create account form added

--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -3,9 +3,27 @@ extends ../layout/index
 block contenido
     div.py-10
         h1.text-4xl.my-10.font-extrabold.text-center Encuentra tu Mascota
-        h2.text-center.text-6xl= pagina
+        h2.text-center.text-2xl.font-extrabold= pagina
 
-        form
-            div
-                label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold TU NOMBRE
-                input#nombre.w-full.px-3.py-2.border.border-gray-300
+        .mt-8.mx-auto.max-w-md
+            .bg-white.py-8.px-4.shadow
+                form.space-y-5
+
+                    div
+                        label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for='nombre') TU NOMBRE
+                        input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gay-400(placeholder="Tu Nombre" type="text" name="nombre")
+
+
+                    div
+                        label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for='email') Direccion de Email
+                        input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gay-400(placeholder="Tu Email" type="email" name="email")
+
+                    div
+                        label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for='password') Password
+                        input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gay-400(placeholder="Password" type="password" name="password")
+
+                    div
+                            label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for='repetir_password') Repetir Password
+                            input#repetir_password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gay-400(placeholder="Repite Password" type="repetir_password" name="repetir_password")
+
+                    input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Crear Cuenta")
