--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -5,5 +5,8 @@ html(lang="en")
         meta(name="viewport", content="width=device-width,initial-scale=1.0")
         title Encuentra tu mascota | #{pagina}
         link(rel="stylesheet", href="/css/app.css")
-    body
+    body.min-h-sccreen.bg-gray-50
+
+        main(class="mx-auto container mt-10 px-2")
+
             block contenido
