Login Forms added

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -598,6 +598,10 @@ video {
   display: block;
 }
 
+.flex {
+  display: flex;
+}
+
 .w-full {
   width: 100%;
 }
@@ -608,6 +612,14 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
@@ -701,6 +713,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
