--- a/views/auth/olvide-password.pug
+++ b/views/auth/olvide-password.pug
@@ -14,12 +14,9 @@ block contenido
                         label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for='email') Direccion de Email
                         input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gay-400(placeholder="Tu Email" type="email" name="email")
 
-                    div
-                        label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for='password') Password
-                        input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gay-400(placeholder="Password" type="password" name="password")
 
                     div.flex.items-center.justify-between
                         a.text-gray-500.text-xs(href="/auth/registro") No tienes cuenta? Crea una
-                        a.text-gray-500.text-xs(href="/auth/olvide-password") Olvide mi Password
+                        a.text-gray-500.text-xs(href="/auth/login") Ya tienes cuenta? Inicia Sesion
 
                     input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Iniciar Sesion")
